adding hero & about section

--- a/index.html
+++ b/index.html
@@ -9,3 +9,40 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" href="./assets/images/favicon.png" type="image/gif" />
 </head>
+
+
+<body>
+    <!-- Header & Nav -->
+    <header>
+        <h1>Miguel Mulet</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="contact">Contact</a>
+        </nav>
+    </header>
+
+    <!-- Beginning of Hero -->
+    <section class="hero">
+        <!-- hero image -->
+        <img src="./assets/images/Avatar.png"/>
+        <!-- Text on Hero -->
+        <div>
+            <h2>Full Stack Developer</h2>
+        </div>
+    </section>
+
+    
+    <main class="page-wrapper">
+        <!-- About Section -->
+        <section class="page-section" id="about">
+            <h2>About Me</h2>
+            <div>
+                <p>HeLlo! My name is Miguel Mulet, I am learning to become a Full Stack Developer at The University of Miami.
+                </br>So far my skills are in: HTML/CSS
+                </p>
+            </div>
+        </section>
+
+    </main>
+</body>
