adding Projects grid collage

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <h1>Miguel Mulet</h1>
         <nav>
+            <!-- Navigation buttons -->
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="contact">Contact</a>
@@ -25,7 +26,7 @@
     <!-- Beginning of Hero -->
     <section class="hero">
         <!-- hero image -->
-        <img src="./assets/images/Avatar.png"/>
+        <img src="./assets/images/Avatar.png" alt="Photograph of Miguel Mulet"/>
         <!-- Text on Hero -->
         <div>
             <h2>Full Stack Developer</h2>
@@ -38,10 +39,38 @@
         <section class="page-section" id="about">
             <h2>About Me</h2>
             <div>
-                <p>HeLlo! My name is Miguel Mulet, I am learning to become a Full Stack Developer at The University of Miami.
+                <!-- About Paragraph -->
+                <p>Hello! My name is Miguel Mulet, I am learning to become a Full Stack Developer at The University of Miami.
                 </br>So far my skills are in: HTML/CSS
                 </p>
             </div>
+        </section>
+
+        <!-- Projects Collage -->
+        <section class="page-section" id="projects">
+            <h2>My Projects</h2>
+            <div class="projects-container">
+                <!-- Main Project = Run Buddy 2.0 -->
+                <a href="https://miguelmulet.github.io/run-buddy/" class="projects-#1 Run Buddy">
+                    <div>
+                        <h3>Run Buddy 2.0</h3>
+                        <span>HTML & CSS</span>
+                    </div>
+                </a>
+                <!-- Secondary Project = Horiseon -->
+                <a href="https://miguelmulet.github.io/horiseon-refactor/" class="projects-#2 Horiseon">
+                    <div>
+                        <h3>Horiseon</h3>
+                        <span>HTML & CSS</span>
+                    </div>
+                </a>
+                <!-- Tertiary Project = Place Holder -->
+                <a href="#" class="projects-#3 navmenu">
+                    <div>
+                        <h3>More Coming Soon</h3>
+                        <span>Waiting for Dev...</span>
+                    </div>
+                </a>
         </section>
 
     </main>
