adding contact section

--- a/index.html
+++ b/index.html
@@ -73,5 +73,35 @@
                 </a>
         </section>
 
+        <!-- Contact Section -->
+        <section class="page-section contact" id="contact">
+            <h2>Contact Me</h2>
+            <div>
+                <address>
+                    <!-- Email Button -->
+                    <a href="mailto: miguelxdev@gmail.com">
+                        Email
+                    </a>
+                    <!-- Github Button -->
+                    <a href="https://github.com/miguelmulet" target="_blank">
+                        <i class="fab fa-github"></i>
+                        GitHub
+                    </a>
+                    <!-- Stack Button -->
+                    <a href="https://stackoverflow.com/users/17566933/miguel" target="_blank">
+                        <i class="fab fa-stack-overflow"></i>
+                        Stack Overflow
+                    </a>
+                    <!-- Linkedin Button -->
+                    <a href="https://www.linkedin.com/in/miguel-mulet-607700227/" target="_blank">
+                        <i class="fab fa-linkedin"></i>
+                        Linkedin
+                    </a>
+                </address>
+            </div>
+        </section>
+
+        
+
     </main>
 </body>
