MVP has been made, time for some CSS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Initial HTML & title w/ favicon -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
@@ -10,7 +11,7 @@
     <link rel="icon" href="./assets/images/favicon.png" type="image/gif" />
 </head>
 
-
+<!-- Main Structure -->
 <body>
     <!-- Header & Nav -->
     <header>
@@ -25,16 +26,20 @@
 
     <!-- Beginning of Hero -->
     <section class="hero">
-        <!-- hero image -->
-        <img src="./assets/images/Avatar.png" alt="Photograph of Miguel Mulet"/>
         <!-- Text on Hero -->
         <div>
-            <h2>Full Stack Developer</h2>
+            <h2>Full Stack</h2>
+            <h2>Full Stack</h2>
+            <h2>Full Stack</h2>
+            <h2>Full Stack</h2>
+            <h2>Full Stack</h2>
         </div>
     </section>
 
     
     <main class="page-wrapper">
+        <!-- Photograph -->
+        <img src="./assets/images/Avatar.png" alt="A Photograph of Miguel Mulet">
         <!-- About Section -->
         <section class="page-section" id="about">
             <h2>About Me</h2>
@@ -100,8 +105,6 @@
                 </address>
             </div>
         </section>
-
-        
-
     </main>
+    <!-- End of Page Wrapper -->
 </body>
