--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- Navigation buttons -->
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
-            <a href="contact">Contact</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
