adding nav & hero styles

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Beginning of Hero -->
     <section class="hero">
         <!-- Text on Hero -->
-        <div>
+        <div class="blink">
             <h2>Full Stack</h2>
             <h2>Full Stack</h2>
             <h2>Full Stack</h2>
