adding about styles

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <!-- Photograph -->
         <img src="./assets/images/Avatar.png" alt="A Photograph of Miguel Mulet">
         <!-- About Section -->
-        <section class="page-section" id="about">
-            <h2>About Me</h2>
+        <section class="about" id="about">
+            <h2>About Me:</h2>
             <div>
                 <!-- About Paragraph -->
                 <p>Hello! My name is Miguel Mulet, I am learning to become a Full Stack Developer at The University of Miami.
@@ -52,7 +52,7 @@
         </section>
 
         <!-- Projects Collage -->
-        <section class="page-section" id="projects">
+        <section class="projects" id="projects">
             <h2>My Projects</h2>
             <div class="projects-container">
                 <!-- Main Project = Run Buddy 2.0 -->
@@ -79,7 +79,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section class="page-section contact" id="contact">
+        <section class="contact" id="contact">
             <h2>Contact Me</h2>
             <div>
                 <address>
