changed header/nav & added new images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Welcome to Miguel's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" href="./assets/images/favicon.png" type="image/gif" />
+    <!-- font import -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=BioRhyme&display=swap');
+    </style>
 </head>
 
 <!-- Main Structure -->
@@ -28,6 +32,7 @@
     <section class="hero">
         <!-- Text on Hero -->
         <div class="blink">
+            <br>
             <h2>Full Stack</h2>
             <h2>Full Stack</h2>
             <h2>Full Stack</h2>
@@ -45,9 +50,8 @@
             <h2>About Me:</h2>
             <div>
                 <!-- About Paragraph -->
-                <p>Hello! My name is Miguel Mulet, I am learning to become a Full Stack Developer at The University of Miami.
-                </br>So far my skills are in: HTML/CSS
-                </p>
+                <p>Hello! My name is Miguel Mulet, I am learning to become a Full Stack Developer at The University of Miami.</p>
+                <p>My Skills: HTML / CSS</p>
             </div>
         </section>
 
@@ -76,6 +80,7 @@
                         <span>Waiting for Dev...</span>
                     </div>
                 </a>
+            </div>
         </section>
 
         <!-- Contact Section -->
