adding projects images & styles

--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
             <h2>My Projects</h2>
             <div class="projects-container">
                 <!-- Main Project = Run Buddy 2.0 -->
-                <a href="https://miguelmulet.github.io/run-buddy/" class="projects-#1 Run Buddy">
+                <a href="https://miguelmulet.github.io/run-buddy/" class="projects-item RunBuddy">
                     <div>
                         <h3>Run Buddy 2.0</h3>
                         <span>HTML & CSS</span>
                     </div>
                 </a>
                 <!-- Secondary Project = Horiseon -->
-                <a href="https://miguelmulet.github.io/horiseon-refactor/" class="projects-#2 Horiseon">
+                <a href="https://miguelmulet.github.io/horiseon-refactor/" class="projects-item Horiseon">
                     <div>
                         <h3>Horiseon</h3>
                         <span>HTML & CSS</span>
                     </div>
                 </a>
                 <!-- Tertiary Project = Place Holder -->
-                <a href="#" class="projects-#3 navmenu">
+                <a href="#" class="projects-item PlaceHolder">
                     <div>
                         <h3>More Coming Soon</h3>
                         <span>Waiting for Dev...</span>
