--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <h2>Full Stack</h2>
             <h2>Full Stack</h2>
             <h2>Full Stack</h2>
-            <h2>Full Stack</h2>
         </div>
     </section>
 
@@ -45,7 +44,7 @@
     <main class="page-wrapper">
         <!-- Photograph -->
         <img src="./assets/images/Avatar.png" alt="A Photograph of Miguel Mulet">
-        <!-- About Section -->
+        <!-- About Sehttps://miguelmulet.github.io/horiseon-refactor/ction -->
         <section class="about" id="about">
             <h2>About Me:</h2>
             <div>
@@ -63,14 +62,14 @@
                 <a href="https://miguelmulet.github.io/run-buddy/" class="projects-item RunBuddy">
                     <div>
                         <h3>Run Buddy 2.0</h3>
-                        <span>HTML & CSS</span>
+                        <span>- HTML & CSS</span>
                     </div>
                 </a>
                 <!-- Secondary Project = Horiseon -->
                 <a href="https://miguelmulet.github.io/horiseon-refactor/" class="projects-item Horiseon">
                     <div>
                         <h3>Horiseon</h3>
-                        <span>HTML & CSS</span>
+                        <span>- HTML & CSS</span>
                     </div>
                 </a>
                 <!-- Tertiary Project = Place Holder -->
