finishing touches, added contact styles

--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
                 </address>
             </div>
         </section>
+        <!-- end of page wrapper -->
     </main>
-    <!-- End of Page Wrapper -->
 </body>
