Updated with recent project

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <h2>My Projects</h2>
             <div class="projects-container">
                 <!-- Main Project = Run Buddy 2.0 -->
-                <a href="https://miguelmulet.github.io/run-buddy/" class="projects-item RunBuddy">
+                <a href="https://blerandism.github.io/travel_buddy/" class="projects-item travel_buddy">
                     <div>
-                        <h3>Run Buddy 2.0</h3>
-                        <span>- HTML & CSS</span>
+                        <h3>Travel Buddy</h3>
+                        <span>- HTML, CSS & JS</span>
                     </div>
                 </a>
                 <!-- Secondary Project = Horiseon -->
@@ -73,10 +73,10 @@
                     </div>
                 </a>
                 <!-- Tertiary Project = Place Holder -->
-                <a href="#" class="projects-item PlaceHolder">
+                <a href="https://miguelmulet.github.io/run-buddy/" class="projects-item RunBuddy">
                     <div>
-                        <h3>More Coming Soon</h3>
-                        <span>Waiting for Dev...</span>
+                        <h3>Run Buddy 2.0</h3>
+                        <span>- HTML & CSS</span>
                     </div>
                 </a>
             </div>
